# bead-forge

./: .needle-predispatch-sha  CLAUDE.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
.beads/traces/bf-1bz/: metadata.json  stdout.txt
.beads/traces/bf-2oh/: metadata.json  stdout.txt
.beads/traces/bf-8ov/: metadata.json  stdout.txt
.beads/traces/bf-9lj/: metadata.json  stdout.txt
.beads/traces/bf-a4f/: metadata.json  stdout.txt
.beads/traces/bf-axu/: metadata.json  stdout.txt
.beads/traces/bf-d04/: metadata.json  stdout.txt
.beads/traces/bf-ffe/: metadata.json  stdout.txt
.beads/traces/bf-j2t/: metadata.json  stdout.txt
.beads/traces/bf-kty/: metadata.json  stdout.txt
.beads/traces/bf-nh5/: metadata.json  stdout.txt
.beads/traces/bf-nqv/: metadata.json  stdout.txt
.beads/traces/bf-pw5/: metadata.json  stdout.txt
.beads/traces/bf-sqz/: metadata.json  stdout.txt
docs/: README.md  needle-mitosis-migration.md
docs/plan/: plan.md
docs/research/: beads-ecosystem.md  br-compatibility.md  git-native-trackers.md  lightweight-alternatives.md  multi-workspace-beads.md  storage-backends.md  thundering-herd-and-work-queue.md
examples/: test_concurrent_storage.rs  test_schema.rs
notes/: bf-3v3d.md  bf-9lj.md  bf-d04.md  bf-kty.md  bf-sqz.md
src/: batch.rs  bead_store.rs  claim.rs  config.rs  doctor.rs  id.rs  jsonl.rs  lib.rs  main.rs  model.rs  sync.rs
src/cli/: mod.rs
src/format/: json.rs  mod.rs  text.rs  toon.rs
src/storage/: mod.rs  schema.rs  sqlite.rs
tests/: batch_mitosis.rs  concurrent_claim.rs
(+4 files in other folders)
