[package]
name = "bead-forge"
version = "0.1.0"
edition = "2021"
authors = ["jedarden"]
description = "Drop-in replacement for beads_rust (br) with SQLite primary store and atomic claiming"
license = "MIT"
repository = "https://github.com/jedarden/bead-forge"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
rand = "0.8"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
num-bigint = "0.4"
num-traits = "0.2"
shell-words = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bf"
path = "src/main.rs"
